# hybrid-quantum-emulator

./: README.md  Setup.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  index.md
src/control/: __init__.py  calibration.py  telemetry.py
src/control/src/control/: scheduler.py
src/core/: __init__.py  emulator.py  metrics.py  platform.py
src/integration/: __init__.py  base.py  cirq.py  qiskit.py
src/photonics/: __init__.py  interferometer.py  laser.py  modulator.py  wdm.py
src/topology/: __init__.py  compressor.py  homology.py  metrics.py
